<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/linearLY"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/border">

    <android.support.v7.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_margin="@dimen/card_margin"
        android:elevation="3dp"
        card_view:cardCornerRadius="@dimen/card_album_radius">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:id="@+id/infoRL"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/thumbnail"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/album_cover_height"
                    android:layout_marginTop="8dp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:clickable="true"
                    android:scaleType="fitCenter"
                    card_view:srcCompat="@drawable/marvin_gardens" />

                <TextView
                    android:id="@+id/priceTx"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/houses"
                    android:paddingBottom="@dimen/songs_count_padding_bottom"
                    android:paddingLeft="@dimen/album_title_padding"
                    android:paddingRight="@dimen/album_title_padding"
                    android:text="Price"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/thumbnail"
                    android:paddingLeft="@dimen/album_title_padding"
                    android:paddingRight="@dimen/album_title_padding"
                    android:paddingTop="@dimen/album_title_padding"
                    android:text="@string/marving_gardens"
                    android:textColor="@color/album_title"
                    android:textSize="@dimen/album_title" />

                <TextView
                    android:id="@+id/houses"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/title"
                    android:paddingBottom="@dimen/songs_count_padding_bottom"
                    android:paddingLeft="@dimen/album_title_padding"
                    android:paddingRight="@dimen/album_title_padding"
                    android:text="3 houses"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/mortgageText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/title"
                    android:layout_centerHorizontal="true"
                    android:text="TextView"
                    android:textColor="@color/primary_text"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:visibility="invisible" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="false"
                android:layout_alignWithParentIfMissing="false"
                android:layout_below="@+id/infoRL"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/buildButton"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:background="@color/white"
                    android:drawableLeft="@drawable/ic_wall"
                    android:drawablePadding="20dp"
                    android:drawableStart="@drawable/ic_wall"
                    android:text="@string/build"
                    android:textColor="@color/accent"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toStartOf="@+id/guideline"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/guideline2" />


                <Button
                    android:id="@+id/sellButton"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="false"
                    android:layout_alignParentTop="false"
                    android:layout_below="@+id/buildButton"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginTop="8dp"
                    android:background="@color/white"
                    android:drawableLeft="@drawable/ic_demolishing"
                    android:drawablePadding="20dp"
                    android:text="@string/demolish"
                    android:textColor="@color/accent"
                    android:textSize="14sp"
                    card_view:layout_constraintEnd_toStartOf="@+id/guideline"
                    card_view:layout_constraintStart_toStartOf="parent"
                    card_view:layout_constraintTop_toTopOf="@+id/guideline2" />

                <Button
                    android:id="@+id/mortgageButton"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginRight="16dp"
                    android:background="@color/white"
                    android:drawableLeft="@drawable/ic_mortgage"
                    android:drawablePadding="20dp"
                    android:drawableStart="@drawable/ic_mortgage"
                    android:elevation="0dp"
                    android:text="@string/mortgage"
                    android:textColor="@color/accent"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toStartOf="@+id/guideline"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/guideline2" />

                <Button
                    android:id="@+id/mortgageButton2"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignStart="@+id/mortgageButton"
                    android:layout_below="@+id/buildButton"
                    android:layout_marginTop="8dp"
                    android:background="@color/white"
                    android:drawableLeft="@drawable/ic_sell"
                    android:drawablePadding="20dp"
                    android:drawableStart="@drawable/ic_sell"
                    android:elevation="0dp"
                    android:text="@string/sell"
                    android:textColor="@color/accent"
                    android:textSize="14sp"
                    card_view:layout_constraintEnd_toStartOf="@+id/guideline"
                    card_view:layout_constraintStart_toStartOf="parent"
                    card_view:layout_constraintTop_toTopOf="@+id/guideline2" />

            </RelativeLayout>


        </RelativeLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>